--- a/MMPPW/assets/languages/MMPPW.json
+++ b/MMPPW/assets/languages/MMPPW.json
@@ -1,11 +1,19 @@
 {
 	"MMPPW": {
 		"LBL": {
+			"LBL_MMPPW_ACONYUGUE_37431": "A.Conyugue",
+			"LBL_MMPPW_ACTUALIRZ_73784": "Actualizar",
+			"LBL_MMPPW_APELLIDOE_12307": "Apellido del Conyugue",
 			"LBL_MMPPW_APELLIDOO_92317": "Apellido",
 			"LBL_MMPPW_CDULAYTRC_39387": "C\u00e9dula",
+			"LBL_MMPPW_ESTADOCII_86328": "Estado Civil",
 			"LBL_MMPPW_GUARDARUC_40328": "Guardar",
 			"LBL_MMPPW_NACIONALA_73495": "Nacionalidad",
+			"LBL_MMPPW_NCONYUGUE_73182": "N.Conyugue",
+			"LBL_MMPPW_NOMBREDGO_12012": "Nombre del Conyugue",
 			"LBL_MMPPW_NOMBRELTG_33788": "Nombre",
+			"LBL_MMPPW_REGISTRAE_39472": "Registrar persona",
+			"LBL_MMPPW_REGISTRNC_78913": "Registrar Cliente",
 			"LBL_MMPPW_SEXOWHEYB_52012": "Sexo",
 			"LBL_MMPPW_TELFONOJG_43361": "Tel\u00e9fono"
 		},
